--- a/index.html
+++ b/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="utf-8">
     <title>js-calc</title>
   </head>
   <body>
-    <script src="calculator.js" charset="utf-8"></script>
+  <div class="jumbotron text-center">
+
+    <div class="row">
+      <div class="col-lg-2 col-lg-offset-3">
+        <div class="input-group">
+          <input type="text" class="form-control" id="firstNumber"placeholder="first Number">
+        </div><!-- /input-group -->
+      </div><!-- /.col-lg-2 -->
+
+  <!-- Split button -->
+    <div class="col-lg-2">
+      <div class="btn-group">
+        <button type="button" class="btn btn-danger" id="choose">Choose Operator</button>
+        <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span class="caret"></span>
+          <span class="sr-only">Toggle Dropdown</span>
+        </button>
+        <ul class="dropdown-menu">
+          <li id ="addop" onclick="changeButton(this.id)">Addition</li>
+          <li id ="subop" onclick="changeButton(this.id)">Subtraction</li>
+          <li id ="mulop" onclick="changeButton(this.id)">multiplication</li>
+          <li id ="dviop" onclick="changeButton(this.id)">division</li>
+        </ul>
+      </div>
+    </div>
+
+  <div class="col-lg-2">
+    <div class="input-group">
+      <input type="text" class="form-control" id="secondNumber" placeholder="Search for...">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button" onclick="collect()">Go!</button>
+      </span>
+    </div><!-- /input-group -->
+  </div><!-- /.col-lg-6 -->
+</div><!-- /.row -->
+  </div>
+
   </body>
+
+  <footer>
+    <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="calculator.js" charset="utf-8"></script></footer>
 </html>
