--- a/index.html
+++ b/index.html
@@ -3,45 +3,48 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>js-calc</title>
   </head>
-  <body>
+  
+  <body class= "container">
   <div class="jumbotron text-center">
+    <h1> Number Cruncher </h1>
+        <div class="row">
+          <div class="col-lg-2 col-lg-offset-3">
+            <div class="input-group">
+              <input type="text" class="form-control" id="firstNumber"placeholder="first Number">
+            </div><!-- /input-group -->
+          </div><!-- /.col-lg-2 -->
 
-    <div class="row">
-      <div class="col-lg-2 col-lg-offset-3">
-        <div class="input-group">
-          <input type="text" class="form-control" id="firstNumber"placeholder="first Number">
-        </div><!-- /input-group -->
-      </div><!-- /.col-lg-2 -->
+      <!-- Split button -->
+        <div class="col-lg-2">
+          <div class="btn-group">
+            <button type="button" class="btn btn-danger dropdown-toggle"  id="choose" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Choose Operator</button>
+              <span class="sr-only">Toggle Dropdown</span>
 
-  <!-- Split button -->
-    <div class="col-lg-2">
-      <div class="btn-group">
-        <button type="button" class="btn btn-danger" id="choose">Choose Operator</button>
-        <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span class="caret"></span>
-          <span class="sr-only">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-          <li id ="addop" onclick="changeButton(this.id)">Addition</li>
-          <li id ="subop" onclick="changeButton(this.id)">Subtraction</li>
-          <li id ="mulop" onclick="changeButton(this.id)">multiplication</li>
-          <li id ="dviop" onclick="changeButton(this.id)">division</li>
-        </ul>
-      </div>
-    </div>
-
-  <div class="col-lg-2">
-    <div class="input-group">
-      <input type="text" class="form-control" id="secondNumber" placeholder="Search for...">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button" onclick="collect()">Go!</button>
-      </span>
-    </div><!-- /input-group -->
-  </div><!-- /.col-lg-6 -->
-</div><!-- /.row -->
-  </div>
+            <ul class="dropdown-menu">
+              <li id ="addop" onclick="changeButton(this.id)">Addition</li>
+              <li id ="subop" onclick="changeButton(this.id)">Subtraction</li>
+              <li id ="mulop" onclick="changeButton(this.id)">Multiplication</li>
+              <li id ="divop" onclick="changeButton(this.id)">Division</li>
+              <li id ="expop" onclick="changeButton(this.id)">Exponents</li>
+              <li id ="prime" onclick="changeButton(this.id)">Refactor Prime</li>
+            </ul>
+          </div>
+        </div>
+          <div class="col-lg-2">
+            <div class="input-group">
+              <input type="text" class="form-control" id="secondNumber" placeholder="Search for...">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button" onclick="collect()">Go!</button>
+              </span>
+            </div><!-- /input-group -->
+          </div><!-- /.col-lg-6 -->
+    </div><!-- /.row -->
+</div> <!--end of jumbotron-->
+<div class="jumbotron text-center" id="answer">
+</div>
 
   </body>
 
